Changes to correct alignment

--- a/javascript_assignment_1/css/style.css
+++ b/javascript_assignment_1/css/style.css
@@ -206,7 +206,6 @@ label, input {
     border-radius: 8px;
     min-height: 30px;
     min-width: 250px;
-    margin: auto;
 }
 
 textarea {
